# human-posture-visualization

./: .gitignore  README.md  camera_adjuster_console.py  config.yaml  config_manager.py  dataset_adapter.py  interactive_pose_adjuster.py  model_selector.py  pyproject.toml
datasets/: README.md
models/: SMPLX_data_structure.md  SMPL_data_structure.md
static/: joint_config.json
static/js/: pose_adjuster.js
templates/: pose_adjuster.html
